# desktop

./: .gitattributes  .gitignore  Arch.dockerfile  BETA_AGREEMENT.md  CHANGELOG.md  CLA.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  Gemfile  KAPPS-LIBS.md  LICENSE.txt  README.md  Rakefile  application.item.qbs  cli.product.qbs  client.product.qbs  clientlib.product.qbs  daemon.product.qbs  extras.project.qbs  integtest.product.qbs  pia_desktop.qbs  pia_onesky.js  pia_util.js  project.item.qbs  qtcbuild.sh  test.item.qbs  tests.project.qbs  winstaller.item.qbs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_linux.yml  build_linux_arm.yml  build_mac.yml  build_windows.yml  dev.yml  release.yml
brands/: .gitignore  render_tray.sh
brands/pia/: brand_client.rc  brand_installer.rc  brandinfo.json
cli/src/: applysettings.cpp  applysettings.h  authcommand.cpp  authcommand.h  backgroundcommand.cpp  backgroundcommand.h  cli.cpp  cliclient.cpp  cliclient.h  clicommand.cpp  clicommand.h  dedicatedipcommand.cpp  dedicatedipcommand.h  getcommand.cpp  getcommand.h  makecommand.cpp  makecommand.h  setcommand.cpp  setcommand.h  watchcommand.cpp  watchcommand.h
client/: README_SHADERS.md
client/src/: appscanner.cpp  appscanner.h  balancetext.cpp  balancetext.h  brandhelper.cpp  brandhelper.h  circlemousearea.cpp  circlemousearea.h  client.cpp  client.h  clientqmlcontext.cpp  clientqmlcontext.h  clientsettings.cpp  clientsettings.h  clipboard.h  draghandle.cpp  draghandle.h  flexvalidator.h  focuscue.cpp  focuscue.h  main.cpp  nativehelpers.cpp  nativehelpers.h  nativetray.cpp  nativetray.h  nativewindowscaler.cpp  nativewindowscaler.h  path_interface.h  platformscreens.cpp  platformscreens.h  platformuistrings.cpp  platformuistrings.h  preconnectstatus.cpp  preconnectstatus.h  qtscreens.cpp  qtscreens.h  splittunnelmanager.cpp  splittunnelmanager.h  trayiconmanager.cpp  trayiconmanager.h  (+10 more)
client/ts/: ar.ts  da.ts  de.ts  en_US.ts  es_MX.ts  fr.ts  it.ts  ja.ts  ko.ts  nb.ts  nl.ts  pl.ts  ps.ts  pt_BR.ts  ro.ts  ru.ts  sv.ts  th.ts  tr.ts  zh_Hans.ts  zh_Hant.ts
clientlib/src/: clientlib.cpp  clientlib.h  daemonconnection.cpp  daemonconnection.h
common/res/: manifest.xml
common/src/: apibase.cpp  apibase.h  apinetwork.cpp  apinetwork.h  apiretry.cpp  apiretry.h  appsingleton.cpp  appsingleton.h  async.cpp  async.h  common.cpp  common.h  dtop.cpp  dtop.h  elapsedtime.cpp  elapsedtime.h  exec.cpp  exec.h  filewatcher.cpp  filewatcher.h  ipc.cpp  ipc.h  json.cpp  json.h  jsonrefresher.cpp  jsonrefresher.h  jsonrpc.cpp  jsonrpc.h  jsonstate.cpp  jsonstate.h  linebuffer.cpp  linebuffer.h  locations.cpp  locations.h  networktaskwithretry.cpp  networktaskwithretry.h  nodelist.h  openssl.cpp  openssl.h  output.cpp  (+14 more)
daemon/res/: daemon.qrc
daemon/src/: apiclient.cpp  apiclient.h  automation.cpp  automation.h  configwriter.cpp  configwriter.h  daemon.cpp  daemon.h  environment.cpp  environment.h  ipaddress.cpp  ipaddress.h  latencytracker.cpp  latencytracker.h  locations.cpp  locations.h  metaserviceapibase.cpp  metaserviceapibase.h  networkmonitor.cpp  networkmonitor.h  openvpn.cpp  openvpn.h  openvpnmethod.cpp  openvpnmethod.h  pathmtu.cpp  pathmtu.h  portforwarder.cpp  portforwarder.h  portforwardrequest.cpp  portforwardrequest.h  processrunner.cpp  processrunner.h  servicequality.cpp  servicequality.h  socksserver.cpp  socksserver.h  socksserverthread.cpp  socksserverthread.h  updatedownloader.cpp  updatedownloader.h  (+10 more)
docs/: CLI-interface.md  Debugging crashes.md  Dynamic libraries.md  IPv6-support.md  MacOS Split Tunnel.md  Openssl.md  Openvpn.md  Translations.md
extras/icons/: pia.icns
extras/openvpn/: mac_openvpn_helper.cpp
extras/support-tool/: crash-reporter.qrc  payloadbuilder.cpp  payloadbuilder.h  reporthelper.cpp  reporthelper.h  support_tool_main.cpp
graphics/: port-forward-slash.xcf  shadows.sketch
graphics/automation_rule_types/: .gitignore  render-icons.sh
graphics/calling_cards_assets/: render.sh
graphics/connection_tile/: render-connection_tile.sh
graphics/geo_icons/: render.sh
graphics/settings_icons/: .gitignore  README.md  positions-master.sketch  render_quicksettings.sh  render_settings_tabs.sh  render_svg.sh
graphics/tray/: .gitignore
graphics/win_icons/: make_ico.sh  make_svg_ico.sh
headless_tests/: .rspec  README.md  allowlan_spec.rb  dependencyloading_spec.rb  dns_spec.rb  leakprotection_spec.rb  openvpn_spec.rb  portforward_spec.rb  protocols_spec.rb  regions_spec.rb  splittunnel_spec.rb
headless_tests/spec/: spec_helper.rb
headless_tests/src/: allowlan.rb  awslambda.rb  checksystem.rb  command.rb  dnsleakchecker.rb  leakchecker.rb  loadedlibchecker.rb  nethelp.rb  piactl.rb  (+4 more)
rake/: archive.rb  buildsystem.rb  crowdin.rb  executable.rb  executablebuilder.rb  install.rb  macinfoplist.rb  makeqtsymbols.rb
scripts/: bash.bat  build-android-kapps.sh  build-linux.sh  build-macos-kapps-xcframework.sh  build-macos.sh  build-windows.bat  fix_broken_onesky_Jan2020.sh  gendebug.sh  generate.js  notarize-macos.sh  package-lock.json  package.json  pseudolocalize.js  winstaller_localize.js  winstaller_localize_all.sh
tests/: tst_any.cpp  tst_apiclient.cpp  tst_check.cpp  tst_connectionconfig.cpp  tst_constrainedhash.cpp  tst_core_fs.cpp  tst_core_util.cpp  tst_exec.cpp  tst_flow_tracker.cpp  tst_ipaddress.cpp  tst_json.cpp  tst_jsonrefresher.cpp  tst_jsonrpc.cpp  tst_jsonstate.cpp  tst_latencytracker.cpp  tst_linebuffer.cpp  tst_localsockets.cpp  tst_nearestlocations.cpp  tst_networkmonitor.cpp  tst_networktaskwithretry.cpp  tst_nodelist.cpp  tst_nullable_t.cpp  tst_openssl.cpp  tst_originalnetworkscan.cpp  tst_path.cpp  tst_portforwarder.cpp  tst_raii.cpp  tst_regionlist.cpp  tst_retainshared.cpp  tst_rt_tables_initializer.cpp  tst_semversion.cpp  tst_servicegroup.cpp  tst_settings.cpp  tst_splitdnsinfo.cpp  tst_subnetbypass.cpp  tst_tasks.cpp  tst_transportselector.cpp  tst_updatedownloader.cpp  tst_vpnmethod.cpp  tst_wfp_filters.cpp  (+2 more)
tools/: Vagrantfile  pia_multi_region_mtr.sh
(+958 files in other folders)
